push boilerplate #3 layout

--- a/index.html
+++ b/index.html
@@ -38,35 +38,223 @@
             Infographic Title
         </h1>
         <section class="header--description">
-            Turpis diam. Eu ac, dignissim ultricies porta lectus purus etiam! Velit nisi, nisi, turpis, in massa, massa! Pulvinar lorem tortor mid etiam mauris nunc. Augue vut, elementum porta tincidunt rhoncus.
+            Turpis diam. Eu ac, dignissim ultricies porta lectus purus etiam! Velit nisi, nisi, turpis, in massa, massa! Pulvinar lorem tortor mid etiam mauris nunc. Augue vut, elementum porta tincidunt rhoncus.<sup class="source-link">1</sup>
         </section>
     </header>
 
     <main class="body--main">
-        <!-- add a class "reverse" to reverse order -->
+        <section class="main--section main--section_full">
+            <img src="http://placekitten.com/1600/1200" />
+        </section>
         <section class="main--section">
+            <header class="section--header">
+                <h1>Header</h1>
+            </header>
             <section class="section--content">
-                <header class="section--header">
+                <header class="content--header">
+                    <section class="content--graphic">
+                        <img src="http://placekitten.com/600/400" />
+                    </section>
                     <h2>
                         Section Title
                     </h2>
                 </header>
-                <div class="content--text">
-                    Scelerisque dis ut dolor rhoncus urna a habitasse, ut vel arcu mid? Odio et! Pellentesque natoque sagittis!
+                <div class="content--summary">
+                    Scelerisque dis ut dolor rhoncus urna a habitasse, ut vel arcu mid?<sup class="source-link">2</sup> Odio et! Pellentesque natoque sagittis!
                 </div>
             </section>
-            <section class="section--graphic">
-                <img src="http://placekitten.com/400/600" />
+            <section class="section--content">
+                <header class="content--header">
+                    <section class="content--graphic">
+                        <img src="http://placekitten.com/600/400" />
+                    </section>
+                    <h2>
+                        Section Title
+                    </h2>
+                </header>
+                <div class="content--summary">
+                    Scelerisque dis ut dolor rhoncus urna a habitasse, ut vel arcu mid?<sup class="source-link">2</sup> Odio et! Pellentesque natoque sagittis!
+                </div>
+            </section>
+            <section class="section--content">
+                <header class="content--header">
+                    <section class="content--graphic">
+                        <img src="http://placekitten.com/600/400" />
+                    </section>
+                    <h2>
+                        Section Title
+                    </h2>
+                </header>
+                <div class="content--summary">
+                    Scelerisque dis ut dolor rhoncus urna a habitasse, ut vel arcu mid?<sup class="source-link">2</sup> Odio et! Pellentesque natoque sagittis!
+                </div>
+            </section>
+        </section>
+        <section class="main--section">
+            <header class="section--header">
+                <h1>Header</h1>
+            </header>
+            <section class="section--content">
+                <header class="content--header">
+                    <section class="content--graphic">
+                        <img src="http://placekitten.com/600/400" />
+                    </section>
+                    <h2>
+                        Section Title
+                    </h2>
+                </header>
+                <div class="content--summary">
+                    Scelerisque dis ut dolor rhoncus urna a habitasse, ut vel arcu mid?<sup class="source-link">2</sup> Odio et! Pellentesque natoque sagittis!
+                </div>
+            </section>
+            <section class="section--content">
+                <header class="content--header">
+                    <section class="content--graphic">
+                        <img src="http://placekitten.com/600/400" />
+                    </section>
+                    <h2>
+                        Section Title
+                    </h2>
+                </header>
+                <div class="content--summary">
+                    Scelerisque dis ut dolor rhoncus urna a habitasse, ut vel arcu mid?<sup class="source-link">2</sup> Odio et! Pellentesque natoque sagittis!
+                </div>
+            </section>
+            <section class="section--content">
+                <header class="content--header">
+                    <section class="content--graphic">
+                        <img src="http://placekitten.com/600/400" />
+                    </section>
+                    <h2>
+                        Section Title
+                    </h2>
+                </header>
+                <div class="content--summary">
+                    Scelerisque dis ut dolor rhoncus urna a habitasse, ut vel arcu mid?<sup class="source-link">2</sup> Odio et! Pellentesque natoque sagittis!
+                </div>
+            </section>
+        </section>
+        <section class="main--section">
+            <header class="section--header">
+                <h1>Header</h1>
+            </header>
+            <section class="section--content">
+                <header class="content--header">
+                    <section class="content--graphic">
+                        <img src="http://placekitten.com/600/400" />
+                    </section>
+                    <h2>
+                        Section Title
+                    </h2>
+                </header>
+                <div class="content--summary">
+                    Scelerisque dis ut dolor rhoncus urna a habitasse, ut vel arcu mid?<sup class="source-link">2</sup> Odio et! Pellentesque natoque sagittis!
+                </div>
+            </section>
+            <section class="section--content">
+                <header class="content--header">
+                    <section class="content--graphic">
+                        <img src="http://placekitten.com/600/400" />
+                    </section>
+                    <h2>
+                        Section Title
+                    </h2>
+                </header>
+                <div class="content--summary">
+                    Scelerisque dis ut dolor rhoncus urna a habitasse, ut vel arcu mid?<sup class="source-link">2</sup> Odio et! Pellentesque natoque sagittis!
+                </div>
+            </section>
+            <section class="section--content">
+                <header class="content--header">
+                    <section class="content--graphic">
+                        <img src="http://placekitten.com/600/400" />
+                    </section>
+                    <h2>
+                        Section Title
+                    </h2>
+                </header>
+                <div class="content--summary">
+                    Scelerisque dis ut dolor rhoncus urna a habitasse, ut vel arcu mid?<sup class="source-link">2</sup> Odio et! Pellentesque natoque sagittis!
+                </div>
+            </section>
+        </section>
+        <section class="main--section">
+            <header class="section--header">
+                <h1>Header</h1>
+            </header>
+            <section class="section--content">
+                <header class="content--header">
+                    <section class="content--graphic">
+                        <img src="http://placekitten.com/600/400" />
+                    </section>
+                    <h2>
+                        Section Title
+                    </h2>
+                </header>
+                <div class="content--summary">
+                    Scelerisque dis ut dolor rhoncus urna a habitasse, ut vel arcu mid?<sup class="source-link">2</sup> Odio et! Pellentesque natoque sagittis!
+                </div>
+            </section>
+            <section class="section--content">
+                <header class="content--header">
+                    <section class="content--graphic">
+                        <img src="http://placekitten.com/600/400" />
+                    </section>
+                    <h2>
+                        Section Title
+                    </h2>
+                </header>
+                <div class="content--summary">
+                    Scelerisque dis ut dolor rhoncus urna a habitasse, ut vel arcu mid?<sup class="source-link">2</sup> Odio et! Pellentesque natoque sagittis!
+                </div>
+            </section>
+            <section class="section--content">
+                <header class="content--header">
+                    <section class="content--graphic">
+                        <img src="http://placekitten.com/600/400" />
+                    </section>
+                    <h2>
+                        Section Title
+                    </h2>
+                </header>
+                <div class="content--summary">
+                    Scelerisque dis ut dolor rhoncus urna a habitasse, ut vel arcu mid?<sup class="source-link">2</sup> Odio et! Pellentesque natoque sagittis!
+                </div>
             </section>
         </section>
     </main>
 
     <footer class="body--footer">
-        <img src="img/marriott-logo.png" alt="Marriott Intl" />
+        <section class="footer--logo">
+            <img src="img/marriott-logo_2x.png" alt="Marriott Intl" />
+            <div>
+                Marriott International is a leading lodging company with more than 3,700 properties in 74 countries and territories across 17 brands worldwide.
+            </div>
+        </section>
+        <aside class="sources" id="sources">
+            <a class="sources--tab" id="sourcesTab">Sources</a>
+            <ol>
+                <li>
+                    <a href="http://google.com">Google</a>
+                </li>
+                <li>
+                    <a href="http://facebook.com">Facebook</a>
+                </li>
+                <li>
+                    <a href="http://aol.com">AOL</a>
+                </li>
+                <li>
+                    <a href="http://yahoo.com">Yahoo</a>
+                </li>
+                <li>
+                    <a href="http://twitter.com">Twitter</a>
+                </li>
+                <li>
+                    <a href="http://linkedin.com">LinkedIn</a>
+                </li>
+            </ol>
+        </aside>
     </footer>
-    <aside class="sources" id="sources">
-        <a class="sources--tab" id="sourcesTab">Sources</a>
-    </aside>
 </div>
 <script src="js/app.js" type="text/javascript"></script>
 <script src="js/picturefill.js" type="text/javascript"></script>
