--- a/index.html
+++ b/index.html
@@ -11,6 +11,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
 
+    <!-- SOCIAL METADATA -->
+    <meta property="og:locale" content="en_US"/>
+    <meta property='fb:admins' content='1499820013'/>
+    <meta property="og:type" content="article"/>
+    <meta property="og:title" content="Project Title | By Marriott"/>
+    <meta property="og:description" content="Project Description"/>
+    <meta property="og:url" content="http://www.travel.marriott.com/washington-dc/travel-and-transportation"/>
+    <meta property="og:image" content="http://www.travel.marriott.com/washington-dc/travel-and-transportation/img/share-title.png"/>
+    <meta property='og:site_name' content="Project Title | By Marriott"/>
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:creator" content="@marriott">
+    <meta name="twitter:title" content="Project Title | By Marriott">
+    <meta name="twitter:description" content="Project Description">
+    <meta name="twitter:image" content="http://www.travel.marriott.com/washington-dc/travel-and-transportation/img/share-title.png">
+
+
     <!-- ICONS -->
     <link rel="shortcut icon" href="img/favicon.ico">
     <!-- 57x57 (precomposed) for iPhone 3GS, pre-2011 iPod Touch and older Android devices -->
