--- a/index.html
+++ b/index.html
@@ -114,6 +114,12 @@
                 </li>
             </ol>
             <section class="share--list">
+                <section class="share-options">
+                    <a target="_blank" href="https://facebook.com/sharer.php?u=http://www.travel.marriott.com/washington-dc/travel-and-transportation" class="facebook"></a>
+                    <a target="_blank" href="https://twitter.com/intent/tweet?url=http://www.travel.marriott.com/washington-dc/travel-and-transportation&text=The+Islands+Around+Charleston&via=marriott" class="twitter"></a>
+                    <a target="_blank" href="https://plus.google.com/share?url=http://www.travel.marriott.com/washington-dc/travel-and-transportation" class="gplus"></a>
+                    <a target="_blank" href="mailto:?subject=The+Islands+Around+Charleston+by+Marriott&body=http://www.travel.marriott.com/washington-dc/travel-and-transportation" class="email"></a>
+                </section>
                 <section class="embed-code-wrapper" id="embedCodeWrapper">
                     Embed it on your webpage<br>
                     <textarea class="embed-code" id="embedCode" disabled><div id="lemonlyIGWrapper"><div id="lemonlyIG--full-screen-link"><a href="http://www.travel.marriott.com/washington-dc/travel-and-transportation" target="_blank">View this full screen</a></div><div id="lemonlyIG"><iframe src="http://www.travel.marriott.com/washington-dc/travel-and-transportation" frameborder="0"></iframe><link href="http://www.travel.marriott.com/washington-dc/travel-and-transportation/css/iframe.css" rel="stylesheet" /></div></div></textarea>
