--- a/index.html
+++ b/index.html
@@ -29,14 +29,10 @@
 
     <!-- ICONS -->
     <link rel="shortcut icon" href="img/favicon.ico">
-    <!-- 57x57 (precomposed) for iPhone 3GS, pre-2011 iPod Touch and older Android devices -->
-    <link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon-precomposed.png">
-    <!-- 72x72 (precomposed) for 1st generation iPad, iPad 2 and iPad mini -->
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/apple-touch-icon-72x72-precomposed.png">
-    <!-- 114x114 (precomposed) for iPhone 4, 4S, 5 and post-2011 iPod Touch -->
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/apple-touch-icon-114x114-precomposed.png">
-    <!-- 144x144 (precomposed) for iPad 3rd and 4th generation -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/apple-touch-icon-144x144-precomposed.png">
+    <link href="img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="img/apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76" />
+    <link href="img/apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120" />
+    <link href="img/apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152" />
 
 
     <!-- STYLESHEETS-->
@@ -84,7 +80,7 @@
 
     <footer class="body--footer">
         <section class="footer--logo">
-            <img src="img/marriott-logo_2x.png" alt="Marriott Intl" />
+            <a href="http://www.marriott.com"><img src="img/marriott-logo_2x.png" alt="Marriott Intl" /></a>
             <div>
                 Marriott International is a leading lodging company with more than 3,700 properties in 74 countries and territories across 17 brands worldwide.
             </div>
@@ -95,22 +91,22 @@
             </nav>
             <ol class="sources--list">
                 <li>
-                    <a href="http://google.com">Google</a>
+                    <a target="_parent" href="http://google.com">Google</a>
                 </li>
                 <li>
-                    <a href="http://facebook.com">Facebook</a>
+                    <a target="_parent" href="http://facebook.com">Facebook</a>
                 </li>
                 <li>
-                    <a href="http://aol.com">AOL</a>
+                    <a target="_parent" href="http://aol.com">AOL</a>
                 </li>
                 <li>
-                    <a href="http://yahoo.com">Yahoo</a>
+                    <a target="_parent" href="http://yahoo.com">Yahoo</a>
                 </li>
                 <li>
-                    <a href="http://twitter.com">Twitter</a>
+                    <a target="_parent" href="http://twitter.com">Twitter</a>
                 </li>
                 <li>
-                    <a href="http://linkedin.com">LinkedIn</a>
+                    <a target="_parent" href="http://linkedin.com">LinkedIn</a>
                 </li>
             </ol>
             <section class="share--list">
