--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
 <head>
     <!-- METADATA -->
-    <title>Project Template</title>
+    <title>Project Title | By Marriott</title>
     <meta charset="utf-8">
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
@@ -17,22 +17,22 @@
     <meta property="og:type" content="article"/>
     <meta property="og:title" content="Project Title | By Marriott"/>
     <meta property="og:description" content="Project Description"/>
-    <meta property="og:url" content="http://www.travel.marriott.com/washington-dc/travel-and-transportation"/>
-    <meta property="og:image" content="http://www.travel.marriott.com/washington-dc/travel-and-transportation/img/share-title.png"/>
+    <meta property="og:url" content="http://travel.marriott.com/infographic/url"/>
+    <meta property="og:image" content="http://travel.marriott.com/infographic/url/img/share-title.png"/>
     <meta property='og:site_name' content="Project Title | By Marriott"/>
     <meta name="twitter:card" content="summary">
     <meta name="twitter:creator" content="@marriott">
     <meta name="twitter:title" content="Project Title | By Marriott">
     <meta name="twitter:description" content="Project Description">
-    <meta name="twitter:image" content="http://www.travel.marriott.com/washington-dc/travel-and-transportation/img/share-title.png">
+    <meta name="twitter:image" content="http://travel.marriott.com/infographic/url/img/share-title.png">
 
 
     <!-- ICONS -->
     <link rel="shortcut icon" href="img/favicon.ico">
-    <link href="img/apple-touch-icon.png" rel="apple-touch-icon" />
-    <link href="img/apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76" />
-    <link href="img/apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120" />
-    <link href="img/apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152" />
+    <link href="http://travel.marriott.com/infographic/url/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="http://travel.marriott.com/infographic/url/img/apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76" />
+    <link href="http://travel.marriott.com/infographic/url/img/apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120" />
+    <link href="http://travel.marriott.com/infographic/url/img/apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152" />
 
 
     <!-- STYLESHEETS-->
@@ -80,7 +80,7 @@
 
     <footer class="body--footer">
         <section class="footer--logo">
-            <a href="http://www.marriott.com"><img src="img/marriott-logo_2x.png" alt="Marriott Intl" /></a>
+            <a target="_parent" href="http://www.marriott.com"><img src="img/marriott-logo_2x.png" alt="Marriott Intl" /></a>
             <div>
                 Marriott International is a leading lodging company with more than 3,700 properties in 74 countries and territories across 17 brands worldwide.
             </div>
@@ -111,19 +111,19 @@
             </ol>
             <section class="share--list">
                 <section class="share-options">
-                    <a target="_blank" href="https://facebook.com/sharer.php?u=http://www.travel.marriott.com/washington-dc/travel-and-transportation" class="facebook"></a>
-                    <a target="_blank" href="https://twitter.com/intent/tweet?url=http://www.travel.marriott.com/washington-dc/travel-and-transportation&text=The+Islands+Around+Charleston&via=marriott" class="twitter"></a>
-                    <a target="_blank" href="https://plus.google.com/share?url=http://www.travel.marriott.com/washington-dc/travel-and-transportation" class="gplus"></a>
-                    <a target="_blank" href="mailto:?subject=The+Islands+Around+Charleston+by+Marriott&body=http://www.travel.marriott.com/washington-dc/travel-and-transportation" class="email"></a>
+                    <a target="_blank" href="https://facebook.com/sharer.php?u=http://travel.marriott.com/infographic/url" class="facebook"></a>
+                    <a target="_blank" href="https://twitter.com/intent/tweet?url=http://travel.marriott.com/infographic/url&text=Title&via=marriott" class="twitter"></a>
+                    <a target="_blank" href="https://plus.google.com/share?url=http://travel.marriott.com/infographic/url" class="gplus"></a>
+                    <a target="_blank" href="mailto:?subject=Title+by+Marriott&body=http://travel.marriott.com/infographic/url" class="email"></a>
                 </section>
                 <section class="embed-code-wrapper" id="embedCodeWrapper">
                     Embed it on your webpage<br>
-                    <textarea class="embed-code" id="embedCode" disabled><div id="lemonlyIGWrapper"><div id="lemonlyIG--full-screen-link"><a href="http://www.travel.marriott.com/washington-dc/travel-and-transportation" target="_blank">View this full screen</a></div><div id="lemonlyIG"><iframe src="http://www.travel.marriott.com/washington-dc/travel-and-transportation" frameborder="0"></iframe><link href="http://www.travel.marriott.com/washington-dc/travel-and-transportation/css/iframe.css" rel="stylesheet" /></div></div></textarea>
+                    <textarea class="embed-code" id="embedCode" disabled><div id="lemonlyIGWrapper"><div id="lemonlyIG--full-screen-link"><a href="http://travel.marriott.com/infographic/url" target="_blank">View this full screen</a></div><div id="lemonlyIG"><iframe src="http://travel.marriott.com/infographic/url" frameborder="0"></iframe><link href="http://travel.marriott.com/infographic/url/css/iframe.css" rel="stylesheet" /></div></div></textarea>
                     <a id="staticEmbed">Having trouble with the embed code?</a>
                 </section>
                 <section class="embed-code-wrapper static-embed" id="staticEmbedCodeWrapper">
                     Embed a static version<br>
-                    <textarea class="embed-code" id="staticEmbedCode" disabled><a target="_blank" href="http://www.travel.marriott.com/washington-dc/travel-and-transportation"><img src="http://www.travel.marriott.com/washington-dc/travel-and-transportation/img/dc-metro-survival-guide.jpg" alt="DC Metro Survival Guide" /></a></textarea>
+                    <textarea class="embed-code" id="staticEmbedCode" disabled><a target="_blank" href="http://travel.marriott.com/infographic/url"><img src="http://travel.marriott.com/infographic/url/img/image-name.jpg" alt="Title" /></a></textarea>
                     <a id="interactiveEmbed">Want to embed the interactive version?</a>
                 </section>
             </section>
