--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
 
 
     <!-- ICONS -->
-    <link rel="shortcut icon" href="img/favicon.ico">
-    <link href="http://travel.marriott.com/infographic/url/img/apple-touch-icon.png" rel="apple-touch-icon" />
-    <link href="http://travel.marriott.com/infographic/url/img/apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76" />
+    <link href="img/favicon.ico" rel="shortcut icon">
+    <link href="http://travel.marriott.com/infographic/url/img/apple-touch-icon.png"         rel="apple-touch-icon" />
+    <link href="http://travel.marriott.com/infographic/url/img/apple-touch-icon-76x76.png"   rel="apple-touch-icon" sizes="76x76" />
     <link href="http://travel.marriott.com/infographic/url/img/apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120" />
     <link href="http://travel.marriott.com/infographic/url/img/apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152" />
+    <link href="http://travel.marriott.com/infographic/url/img/apple-touch-icon-180x180.png" rel="apple-touch-icon" sizes="180x180" />
 
 
     <!-- STYLESHEETS-->
