--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <main class="body--main">
         <section class="main--section main--section_full">
-            <img src="http://placekitten.com/1600/1200" />
+            <img src="http://placekitten.com/1600/1200" alt="" />
         </section>
         <section class="main--section">
             <header class="section--header">
@@ -133,7 +133,6 @@
 </div>
 <script src="js/app.js" type="text/javascript"></script>
 <script src="js/picturefill.js" type="text/javascript"></script>
-<script src="http://localhost:35729/livereload.js" type="text/javascript"></script>
 <!-- google analytics -->
 <!-- end google analytics -->
 </body>
