--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 </section>
                 <section class="embed-code-wrapper static-embed" id="staticEmbedCodeWrapper">
                     Embed a static version<br>
-                    <textarea class="embed-code" id="staticEmbedCode" disabled><a target="_blank" href="http://travel.marriott.com/infographic/url"><img src="http://travel.marriott.com/infographic/url/img/image-name.jpg" alt="Title" /></a></textarea>
+                    <textarea class="embed-code" id="staticEmbedCode" disabled><a target="_blank" href="http://travel.marriott.com/infographic/url"><img src="http://travel.marriott.com/infographic/url/img/image-name.jpg" alt="Project Title" /></a></textarea>
                     <a id="interactiveEmbed">Want to embed the interactive version?</a>
                 </section>
             </section>
