--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </footer>
 </div>
 <script src="js/app.js" type="text/javascript"></script>
-<script src="js/picturefill.js" type="text/javascript"></script>
+<!--<script src="js/picturefill.js" type="text/javascript"></script>-->
 <!-- google analytics -->
 <!-- end google analytics -->
 </body>
