move assets to dev/ * version 0.2.0

--- a/dev/index.html
+++ b/dev/index.html
@@ -40,7 +40,7 @@
     <link rel="stylesheet" type="text/css" media="all" href="css/styles.css" />
 
     <!-- SCRIPTS -->
-    <script src="js/modernizr.min.js" type="text/javascript"></script>
+    <script src="js/modernizr.js" type="text/javascript"></script>
 
 
 </head>
