--- a/dev/index.html
+++ b/dev/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
 <head>
     <!-- METADATA -->
-    <title>Project Title | By Marriott</title>
+    <title>Project Title | By ********</title>
     <meta charset="utf-8">
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
@@ -15,25 +15,25 @@
     <meta property="og:locale" content="en_US"/>
     <meta property='fb:admins' content='1499820013'/>
     <meta property="og:type" content="article"/>
-    <meta property="og:title" content="Project Title | By Marriott"/>
+    <meta property="og:title" content="Project Title | By ********"/>
     <meta property="og:description" content="Project Description"/>
-    <meta property="og:url" content="http://travel.marriott.com/infographic/url"/>
-    <meta property="og:image" content="http://travel.marriott.com/infographic/url/img/share-title.png"/>
-    <meta property='og:site_name' content="Project Title | By Marriott"/>
+    <meta property="og:url" content="http://url.to.com/infographic/url"/>
+    <meta property="og:image" content="http://url.to.com/infographic/url/img/share-title.png"/>
+    <meta property='og:site_name' content="Project Title | By ********"/>
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:creator" content="@marriott">
-    <meta name="twitter:title" content="Project Title | By Marriott">
+    <meta name="twitter:creator" content="@********">
+    <meta name="twitter:title" content="Project Title | By ********">
     <meta name="twitter:description" content="Project Description">
-    <meta name="twitter:image" content="http://travel.marriott.com/infographic/url/img/share-title.png">
+    <meta name="twitter:image" content="http://url.to.com/infographic/url/img/share-title.png">
 
 
     <!-- ICONS -->
     <link href="img/favicon.ico" rel="shortcut icon">
-    <link href="http://travel.marriott.com/infographic/url/img/apple-touch-icon.png"         rel="apple-touch-icon" />
-    <link href="http://travel.marriott.com/infographic/url/img/apple-touch-icon-76x76.png"   rel="apple-touch-icon" sizes="76x76" />
-    <link href="http://travel.marriott.com/infographic/url/img/apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120" />
-    <link href="http://travel.marriott.com/infographic/url/img/apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152" />
-    <link href="http://travel.marriott.com/infographic/url/img/apple-touch-icon-180x180.png" rel="apple-touch-icon" sizes="180x180" />
+    <link href="http://url.to.com/infographic/url/img/apple-touch-icon.png"         rel="apple-touch-icon" />
+    <link href="http://url.to.com/infographic/url/img/apple-touch-icon-76x76.png"   rel="apple-touch-icon" sizes="76x76" />
+    <link href="http://url.to.com/infographic/url/img/apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120" />
+    <link href="http://url.to.com/infographic/url/img/apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152" />
+    <link href="http://url.to.com/infographic/url/img/apple-touch-icon-180x180.png" rel="apple-touch-icon" sizes="180x180" />
 
 
     <!-- STYLESHEETS-->
@@ -81,10 +81,7 @@
 
     <footer class="body--footer">
         <section class="footer--logo">
-            <a target="_parent" href="http://www.marriott.com"><img src="img/marriott-logo_2x.png" alt="Marriott Intl" /></a>
-            <div>
-                Marriott International is a leading lodging company with more than 3,700 properties in 74 countries and territories across 17 brands worldwide.
-            </div>
+
         </section>
         <aside class="sources share-active" id="sources">
             <nav class="sources--nav">
@@ -112,19 +109,19 @@
             </ol>
             <section class="share--list">
                 <section class="share-options">
-                    <a target="_blank" href="https://facebook.com/sharer.php?u=http://travel.marriott.com/infographic/url" class="facebook"></a>
-                    <a target="_blank" href="https://twitter.com/intent/tweet?url=http://travel.marriott.com/infographic/url&text=Title&via=marriott" class="twitter"></a>
-                    <a target="_blank" href="https://plus.google.com/share?url=http://travel.marriott.com/infographic/url" class="gplus"></a>
-                    <a target="_blank" href="mailto:?subject=Title+by+Marriott&body=http://travel.marriott.com/infographic/url" class="email"></a>
+                    <a target="_blank" href="https://facebook.com/sharer.php?u=http://url.to.com/infographic/url" class="facebook"></a>
+                    <a target="_blank" href="https://twitter.com/intent/tweet?url=http://url.to.com/infographic/url&text=Title&via=********" class="twitter"></a>
+                    <a target="_blank" href="https://plus.google.com/share?url=http://url.to.com/infographic/url" class="gplus"></a>
+                    <a target="_blank" href="mailto:?subject=Title+by+********&body=http://url.to.com/infographic/url" class="email"></a>
                 </section>
                 <section class="embed-code-wrapper" id="embedCodeWrapper">
                     Embed it on your webpage<br>
-                    <textarea class="embed-code" id="embedCode" disabled><div id="lemonlyIGWrapper"><div id="lemonlyIG--full-screen-link"><a href="http://travel.marriott.com/infographic/url" target="_blank">View this full screen</a></div><div id="lemonlyIG"><iframe src="http://travel.marriott.com/infographic/url" frameborder="0"></iframe><link href="http://travel.marriott.com/infographic/url/css/iframe.css" rel="stylesheet" /></div></div></textarea>
+                    <textarea class="embed-code" id="embedCode" disabled><div id="lemonlyIGWrapper"><div id="lemonlyIG--full-screen-link"><a href="http://url.to.com/infographic/url" target="_blank">View this full screen</a></div><div id="lemonlyIG"><iframe src="http://url.to.com/infographic/url" frameborder="0"></iframe><link href="http://url.to.com/infographic/url/css/iframe.css" rel="stylesheet" /></div></div></textarea>
                     <a id="staticEmbed">Having trouble with the embed code?</a>
                 </section>
                 <section class="embed-code-wrapper static-embed" id="staticEmbedCodeWrapper">
                     Embed a static version<br>
-                    <textarea class="embed-code" id="staticEmbedCode" disabled><a target="_blank" href="http://travel.marriott.com/infographic/url"><img src="http://travel.marriott.com/infographic/url/img/image-name.jpg" alt="Project Title" /></a></textarea>
+                    <textarea class="embed-code" id="staticEmbedCode" disabled><a target="_blank" href="http://url.to.com/infographic/url"><img src="http://url.to.com/infographic/url/img/image-name.jpg" alt="Project Title" /></a></textarea>
                     <a id="interactiveEmbed">Want to embed the interactive version?</a>
                 </section>
             </section>
