--- a/dev/index.html
+++ b/dev/index.html
@@ -37,10 +37,10 @@
 
 
     <!-- STYLESHEETS-->
-    <link rel="stylesheet" type="text/css" media="all" href="css/styles.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="css/styles.css?bedc5a5d" />
 
     <!-- SCRIPTS -->
-    <script src="js/modernizr.js" type="text/javascript"></script>
+    <script src="js/vendor/modernizr.min.js" type="text/javascript"></script>
 
 
 </head>
@@ -128,8 +128,7 @@
         </aside>
     </footer>
 </div>
-<script src="js/app.js" type="text/javascript"></script>
-<!--<script src="js/picturefill.js" type="text/javascript"></script>-->
+<script src="js/site/app.js" type="text/javascript"></script>
 <!-- google analytics -->
 <!-- end google analytics -->
 </body>
