update boilerplate with HTML5 boilerplate code from abessive

--- a/dev/index.html
+++ b/dev/index.html
@@ -56,7 +56,7 @@
     </header>
 
     <main class="body--main">
-        <section class="main--section main--section_full">
+        <section class="main--section">
             <img src="http://placekitten.com/1600/1200" alt="" />
         </section>
         <section class="main--section">
