--- a/dev/index.html
+++ b/dev/index.html
@@ -37,7 +37,9 @@
 
 
     <!-- STYLESHEETS-->
+    <!-- build:css -->
     <link rel="stylesheet" type="text/css" media="all" href="css/styles.css?bedc5a5d" />
+    <!-- endbuild -->
 
     <!-- SCRIPTS -->
     <script src="js/vendor/modernizr.min.js" type="text/javascript"></script>
@@ -59,6 +61,7 @@
         <section class="main--section">
             <img src="http://placekitten.com/1600/1200" alt="" />
         </section>
+
         <section class="main--section">
             <header class="section--header">
                 <h1>Header</h1>
@@ -128,7 +131,11 @@
         </aside>
     </footer>
 </div>
+
+<!-- build:js -->
 <script src="js/site/app.js" type="text/javascript"></script>
+<!-- endbuild -->
+
 <!-- google analytics -->
 <!-- end google analytics -->
 </body>
